create_dataset.out
Lmod has detected the following error: The following module(s) are unknown:
"anaconda3"

Please check the spelling or version number. Also try "module spider ..."
It is also possible your cache file is out-of-date; it may help to try:
  $ module --ignore_cache load "anaconda3"

Also make sure that all modulefiles written in TCL start with the string
#%Module



  File "/projects/academic/erdem/atulanan/twitter_analytics/Models/GCN/dataset.py", line 47
    num_edges = 
                ^
SyntaxError: invalid syntax
